--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^0.5.0
   firebase_auth: ^0.18.0+1
+  hexcolor: ^1.0.4
+
 
   simple_animations: ^2.2.1
   # The following adds the Cupertino Icons font to your application.
